--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://sauercrowd.github.io/blog"
+baseurl = "https://sauercrowd.github.io"
 languageCode = "en-us"
 publishDir = "docs"
 title = "Hugo Cactus Theme"
